// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionRenderer snapshot (T-0006-050) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  style={
    {
      "paddingVertical": 12,
    }
  }
>
  <Text
    accessibilityRole="header"
    style={
      {
        "color": "#14171A",
        "fontSize": 18,
        "fontWeight": "600",
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 4,
      }
    }
  >
    My Section
  </Text>
  <Text
    style={
      {
        "color": "#5C6470",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": 0.1,
        "lineHeight": 18,
        "marginBottom": 8,
      }
    }
  >
    A brief description
  </Text>
  <View
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "column",
      }
    }
  />
</View>
`;

exports[`SectionRenderer snapshot (T-0006-055) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  style={
    {
      "paddingVertical": 20,
    }
  }
>
  <Text
    accessibilityRole="header"
    style={
      {
        "color": "#1A1715",
        "fontSize": 22,
        "fontWeight": "500",
        "letterSpacing": -0.1,
        "lineHeight": 30,
        "marginBottom": 4,
      }
    }
  >
    My Section
  </Text>
  <Text
    style={
      {
        "color": "#6B5F56",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 20,
        "marginBottom": 8,
      }
    }
  >
    A brief description
  </Text>
  <View
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "column",
      }
    }
  />
</View>
`;
